--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 {% extends "master.html" %}
 {% block title %}Home{% endblock %}
 {% block meta %}{% endblock %}
@@ -8,7 +7,7 @@
     <div class="banner full-height-banner" >
              <div class="swiper-container full-height-slider home-full-height-slider"  data-autoplay="0" data-loop="1" data-speed="500" data-center="0" data-slides-per-view="1">
                  <div class="swiper-wrapper ">
-                     <div class="swiper-slide full-height-slide" style="background-image:url(static/img/custom-bg-12.jpg)">
+                     <div class="swiper-slide full-height-slide" style="background-image:url(/static/img/custom-bg-12.jpg)">
                          <div class="overlay"></div>
                          <div class="center">
                              <h1 class="slide-title">High quality design inspired <br> by designers every day</h1>
@@ -19,7 +18,7 @@
                              </div>
                          </div>
                      </div>
-                     <div class="swiper-slide full-height-slide" style="background-image: url('static/img/banner-img-1.jpg')">
+                     <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/banner-img-1.jpg')">
                          <div class="overlay"></div>
                          <div class="center">
                              <h2 class="slide-title">High quality design inspired <br> by designers every day</h2>
@@ -30,7 +29,7 @@
                              </div>
                          </div>
                      </div>
-                     <div class="swiper-slide full-height-slide" style="background-image: url('static/img/banner-img-2.jpg')">
+                     <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/banner-img-2.jpg')">
                          <div class="overlay"></div>
                          <div class="center">
                              <h2 class="slide-title">High quality design inspired <br> by designers every day</h2>
@@ -133,7 +132,7 @@
                 <span class="info-sub-title">Weblionmedia - theme development Sonic</span>
             </div>
             <div class="clip">
-                <div class="bg bg-bg" style="background-image:url(static/img/custom-bg-6.jpg)"></div>
+                <div class="bg bg-bg" style="background-image:url(/static/img/custom-bg-6.jpg)"></div>
             </div>
             <div class="overlay"></div>
         </div>
@@ -206,7 +205,7 @@
                              <div class="swiper-slide">
                                  <div class="col-portfolio">
                                      <div class="portfolio-box">
-                                         <img src="static/img/portfolio-1.jpg" alt="">
+                                         <img src="/static/img/portfolio-1.jpg" alt="">
                                          <a href="#" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                          </a>
@@ -220,7 +219,7 @@
                              <div class="swiper-slide">
                                  <div class="col-portfolio" >
                                      <div class="portfolio-box">
-                                         <img src="static/img/portfolio-3.jpg" alt="">
+                                         <img src="/static/img/portfolio-3.jpg" alt="">
                                          <a href="#" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                          </a>
@@ -234,7 +233,7 @@
                              <div class="swiper-slide">
                                  <div class="col-portfolio" >
                                      <div class="portfolio-box">
-                                         <img src="static/img/portfolio-2.jpg" alt="">
+                                         <img src="/static/img/portfolio-2.jpg" alt="">
                                          <a href="#" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                              <span class="plus"><i class="fa fa-plus"></i></span>
@@ -249,7 +248,7 @@
                              <div class="swiper-slide">
                                  <div class="col-portfolio">
                                      <div class="portfolio-box">
-                                         <img src="static/img/portfolio-1.jpg" alt="">
+                                         <img src="/static/img/portfolio-1.jpg" alt="">
                                          <a href="#" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                          </a>
@@ -263,7 +262,7 @@
                              <div class="swiper-slide">
                                  <div class="col-portfolio" >
                                      <div class="portfolio-box">
-                                         <img src="static/img/portfolio-3.jpg" alt="">
+                                         <img src="/static/img/portfolio-3.jpg" alt="">
                                          <a href="#" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                          </a>
@@ -277,7 +276,7 @@
                              <div class="swiper-slide">
                                  <div class="col-portfolio" >
                                      <div class="portfolio-box">
-                                         <img src="static/img/portfolio-2.jpg" alt="">
+                                         <img src="/static/img/portfolio-2.jpg" alt="">
                                          <a href="#" class="portfolio-link">
                                              <span class="plus"><i class="fa fa-plus"></i></span>
                                              <span class="plus"><i class="fa fa-plus"></i></span>
@@ -337,7 +336,7 @@
                 </div>
             </div>
             <div class="clip">
-                <div class="bg bg-bg" style="background-image:url(static/img/custom-bg-3.jpg)"></div>
+                <div class="bg bg-bg" style="background-image:url(/static/img/custom-bg-3.jpg)"></div>
             </div>
             <div class="overlay"></div>
         </div>
@@ -352,25 +351,25 @@
                 <div class="swiper-container client-slider" data-autoplay="0" data-loop="1" data-speed="500" data-center="0" data-slides-per-view="responsive" data-xs-slides="2" data-sm-slides="3" data-md-slides="4" data-lg-slides="5" data-add-slides="6" >
                     <div class="swiper-wrapper ">
                         <div class="swiper-slide" >
-                            <a href="#"><img src="static/img/client-1.png" alt=""></a>
+                            <a href="#"><img src="/static/img/client-1.png" alt=""></a>
                         </div>
                         <div class="swiper-slide" >
-                            <a href="#"><img src="static/img/client-2.png" alt=""></a>
+                            <a href="#"><img src="/static/img/client-2.png" alt=""></a>
                         </div>
                         <div class="swiper-slide" >
-                            <a href="#"><img src="static/img/client-3.png" alt=""></a>
+                            <a href="#"><img src="/static/img/client-3.png" alt=""></a>
                         </div>
                         <div class="swiper-slide" >
-                            <a href="#"><img src="static/img/client-4.png" alt=""></a>
+                            <a href="#"><img src="/static/img/client-4.png" alt=""></a>
                         </div>
                         <div class="swiper-slide" >
-                            <a href="#"><img src="static/img/client-5.png" alt=""></a>
+                            <a href="#"><img src="/static/img/client-5.png" alt=""></a>
                         </div>
                         <div class="swiper-slide" >
-                            <a href="#"><img src="static/img/client-6.png" alt=""></a>
+                            <a href="#"><img src="/static/img/client-6.png" alt=""></a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="#"><img src="static/img/client-1.png" alt=""></a>
+                            <a href="#"><img src="/static/img/client-1.png" alt=""></a>
                         </div>
                     </div>
                     <div class="pagination pagination-hide "></div>
