--- a/templates/enquiry.html
+++ b/templates/enquiry.html
@@ -9,6 +9,7 @@
 {% endblock %}
 {% block content %}
 <main class="main-portfolio start-block">
+   <section class="section">
             <div class="container">
 				<p>
                                 The culmination of all our efforts is in making you convinced of our   abilities as the perfect internet          solutions provider for your business. Get in touch with us to   give action to these words for the start of a successful and long   lasting relationship.<br>
@@ -38,6 +39,7 @@
 					</div>
 				</div>
 				</div>
+       </section>
 		</main>
 
 
