--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -9,7 +9,9 @@
 {% endblock %}
 {% block content %}
 <main class="main-shotcodes start-block">
+   <section class="section">
 <div class="container">
+
                <div class="col-sm-5">
 				<form action="" class="page-form clearfix">
                     <input class="p-input" type="text" placeholder="Full  Name">
@@ -40,6 +42,8 @@
 					ADS
 				</div>
             </div>
+
+       </section>
         </main>
 
 {% endblock %}
