--- a/templates/master.html
+++ b/templates/master.html
@@ -49,9 +49,14 @@
                                 <li><a href="/about-us">About Us</a></li>
                                 <li class="sub-menu-parent"><a href="/services">Services</a>
                                     <span class="fa open-sb-menu fa-chevron-down"></span>
-                                    <ul class="sub-menu sb"><li class="sub-menu-parent"><a href="#">Web Designing </a>
+                                    <ul class="sub-menu sb"><li class="sub-menu-parent"><a href="/web-designing">Web Designing </a>
 
-                                      </li><li><a href="#">Web Development</a></li> <li><a href="#">Support &amp; Maintenance</a></li> <li><a href="#">Print Media</a>
+                                      </li><li><a href="/web-development">Web Development</a></li>
+                                        <li><a href="/e-commerce">E Commerce</a></li>
+                                        <li><a href="/software-development">Software Development</a></li>
+                                        <li><a href="/seo-services">SEO Services</a></li>
+                                        <li><a href="/support-and-maintanence">Support &amp; Maintenance</a></li>
+                                        <li><a href="print-media">Print Media</a>
                                             </li>
 
                                     </ul>
@@ -83,7 +88,7 @@
                         <ul class="ftr-list">
 
                             <li><i class="fa fa-phone"></i><span>Telephone:</span> <a href="tel:919899636669"> +91*9899636669</a></li>
-                            <li><i class="fa fa-envelope-o"></i><span>E-mail:</span> <a href="support@infotechmediasolutions.com">support@infotechmediasolutions.com</a></li>
+                            <li><i class="fa fa-envelope-o"></i><span>E-mail:</span> <a href="mailto:support@digitechpartner.com">support@digitechpartner.com</a></li>
                             <li><i class="fa fa-skype"></i><span>Skype:</span> <a href="tel:bkotwani"> bkotwani</a></li>
                             <li><i class="fa fa-facebook-official"></i><span>Facebook:</span> <a href="#"> bharat.kotwani1@facebook.com</a></li>
                         </ul>
