--- a/templates/master.html
+++ b/templates/master.html
@@ -43,32 +43,32 @@
                         <nav class="nav">
                             <ul>
                                 <li class="full-menu-parent">
-                                    <a href="/index">Home</a><span class="fa open-sb-menu fa-chevron-down"></span>
+                                    <a href="/index/">Home</a><span class="fa open-sb-menu fa-chevron-down"></span>
 
                                 </li>
-                                <li><a href="/about-us">About Us</a></li>
-                                <li class="sub-menu-parent"><a href="/services">Services</a>
+                                <li><a href="/about-us/">About Us</a></li>
+                                <li class="sub-menu-parent"><a href="#">Services</a>
                                     <span class="fa open-sb-menu fa-chevron-down"></span>
-                                    <ul class="sub-menu sb"><li class="sub-menu-parent"><a href="/web-designing">Web Designing </a>
+                                    <ul class="sub-menu sb"><li class="sub-menu-parent"><a href="/web-designing/">Web Designing </a>
 
-                                      </li><li><a href="/web-development">Web Development</a></li>
-                                        <li><a href="/e-commerce">E Commerce</a></li>
-                                        <li><a href="/software-development">Software Development</a></li>
-                                        <li><a href="/seo-services">SEO Services</a></li>
-                                        <li><a href="/support-and-maintanence">Support &amp; Maintenance</a></li>
-                                        <li><a href="print-media">Print Media</a>
+                                      </li><li><a href="/web-development/">Web Development</a></li>
+                                        <li><a href="/e-commerce/">E Commerce</a></li>
+                                        <li><a href="/software-development/">Software Development</a></li>
+                                        <li><a href="/seo-services/">SEO Services</a></li>
+                                        <li><a href="/support-and-maintanence/">Support &amp; Maintenance</a></li>
+                                        <li><a href="print-media/">Print Media</a>
                                             </li>
 
                                     </ul>
                                 </li>
-                                <li><a href="/web-portfolio">Portfolio</a></li>
+                                <li><a href="/web-portfolio/">Portfolio</a></li>
 
                                 <li class="full-menu-parent">
-                                    <a href="/clients">Clients</a><span class="fa open-sb-menu fa-chevron-down"></span>
+                                    <a href="/our-clients/">Clients</a><span class="fa open-sb-menu fa-chevron-down"></span>
 
                                 </li>
-                                <li><a href="/enquiry">Enquiry</a></li>
-                                <li><a href="/contact-us">Contact Us</a>
+                                <li><a href="/enquiry/">Enquiry</a></li>
+                                <li><a href="/contact-us/">Contact Us</a>
 
                                 </li>
                             </ul>
