--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -1,33 +1,47 @@
 {% extends "master.html" %}
-{% block title %}About{% endblock %}
+{% block title %}Contact Us{% endblock %}
 {% block meta %}{% endblock %}
 {% block css %}{% endblock %}
 {% block headerimage %}
-
-     <div class="banner banner-template"><div class="container"><div class="title-header"><h1>Contact Us </h1><h6 class="header-sub-title">Why Choose Digitech Partner ?</h6></div></div><div class="scroll-to mouse"><span></span></div><div class="clip"><div class="bg bg-bg" style="background-image:url(img/custom-bg-8.jpg)"></div></div><div class="overlay"></div></div>
-
+<div class="banner banner-template"><div class="container"><div class="title-header"><h1>Contact Us</h1><h6 class="header-sub-title">Why Choose Digitech Partner ?</h6></div></div><div class="scroll-to mouse"><span></span></div><div class="clip"><div class="bg bg-bg" style="background-image:url(img/custom-bg-8.jpg)"></div></div><div class="overlay"></div></div>
 {% endblock %}
 {% block content %}
 <main class="main-shotcodes start-block">
-   <section class="section">
-<div class="container">
 
-               <div class="col-sm-5">
-				<form action="" class="page-form clearfix">
-                    <input class="p-input" type="text" placeholder="Full  Name">
-                    <input class="p-input" required="" type="email" placeholder="Email">
-                    <textarea placeholder="Your Message" class="p-textarea"></textarea>
-                    <input class="p-submit" type="submit" value="send">
-                </form>
-               </div>
-				<div class="col-sm-4">
+            <section class="section">
+                <div class="container">
+                    <div class="row">
 
-                        <h3>Get In Touch</h3>
-                        <ul class="ftr-list m">
-                            <li><i class="fa fa-map-marker "></i><span>Address: 58911 Lepzig Hore, 85000 Vienna, Austria</span></li>
-                            <li><i class="fa fa-phone"></i><span>Telephones:</span> <a href="tel:1777553221"> +1 777 55-32-21</a></li>
-                            <li><i class="fa fa-envelope-o"></i><span>E-mail:</span> <a href="mailto:contacts@miracle.com">contacts@miracle.com</a></li>
-                            <li><i class="fa fa-skype"></i><span>Skype:</span> <a href="tel:angelotours"> angelotours</a></li>
+                        <div class="title-block col-sm-12 ">
+                            <h2 class="h1">Want to Contact Us ?</h2>
+                            <div class="sub-title-type-2">
+                                <blockquote class="blockquote blockquote-type-1">Qoluptatem accusantium doloremque laudantium
+                                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+                                </blockquote>
+                            </div>
+                        </div>
+
+                             </div>
+                    <div class="row">
+
+                      <section class="section contact-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <div class="title-block title-travel">
+                            <h2 class="title">OUR company</h2>
+                            <div class="sub-title">
+                                Natus doxes sit voluptatemaccusantium doloremque.
+                            </div>
+                        </div>
+                        <p>Quae ab illo veritatis et quasi architecto beatae vitae dicta. Sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.</p>
+                       <ul class="ftr-list">
+
+                            <li><i class="fa fa-phone"></i><span>Telephone:</span> <a href="tel:919899636669"> +91*9899636669</a></li>
+                            <li><i class="fa fa-envelope-o"></i><span>E-mail:</span> <a href="support@digitechpartner.com">support@infotechmediasolutions.com</a></li>
+                            <li><i class="fa fa-skype"></i><span>Skype:</span> <a href="tel:bkotwani"> bkotwani</a></li>
+                            <li><i class="fa fa-facebook-official"></i><span>Facebook:</span> <a href="#"> bharat.kotwani1@facebook.com</a></li>
                         </ul>
                         <div class="ftr-social">
                             <a target="_blank" href="#"><i class="fa fa-twitter"></i></a>
@@ -36,15 +50,36 @@
                             <a target="_blank" href="#"><i class="fa fa-pinterest-p"></i></a>
                             <a target="_blank" href="#"><i class="fa fa-instagram"></i></a>
                         </div>
-
-				</div>
-				<div class="col-lg-3">
-					ADS
-				</div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="title-block title-travel">
+                            <h2 class="title">Contact Form</h2>
+                            <div class="sub-title">
+                                Perspiciatis unde omnis iste natus doxes sit voluptatem.
+                            </div>
+                            <form class="contact-us"  action="http://demo.freshface.net/html/h-sonic/">
+                                <input type="text" placeholder="Full  Name"   required/>
+                                <input type="email" placeholder="Email Address"  required/>
+                                <textarea placeholder="Your Message" ></textarea>
+                                <input class="submit" type="submit" value="Send message"/>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                             <div class="map-container map-container-type-6">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14028.076247494311!2d77.05105073072856!3d28.47897258086615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d190620c04113%3A0xbdfc86c8d87abd84!2sSector+17%2C+Gurgaon%2C+Haryana!5e0!3m2!1sen!2sin!4v1452372105801" style="width:100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+                        </div>
+                    </div>
             </div>
+        </section>
 
-       </section>
+                    </div>
+                    </div>
+
+
+            </section>
         </main>
-
 {% endblock %}
-{% block js %}{% endblock %}
