--- a/templates/index.html
+++ b/templates/index.html
@@ -4,48 +4,53 @@
 {% block css %}{% endblock %}
 {% block headerimage %}
 
-    <div class="banner full-height-banner" >
-             <div class="swiper-container full-height-slider home-full-height-slider"  data-autoplay="0" data-loop="1" data-speed="500" data-center="0" data-slides-per-view="1">
-                 <div class="swiper-wrapper ">
-                     <div class="swiper-slide full-height-slide" style="background-image:url(/static/img/custom-bg-12.jpg)">
-                         <div class="overlay"></div>
-                         <div class="center">
-                             <h1 class="slide-title">High quality design inspired <br> by designers every day</h1>
-                             <div class="slider-sub-title">We build creative & functional web products</div>
-                             <div class="button-row">
-                                 <a class="button-type-4" href="#">More about us</a>
-                                 <a class="button-type-5" href="#">Our features</a>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/banner-img-1.jpg')">
-                         <div class="overlay"></div>
-                         <div class="center">
-                             <h2 class="slide-title">High quality design inspired <br> by designers every day</h2>
-                             <div class="slider-sub-title">We build creative & functional web products</div>
-                             <div class="button-row">
-                                 <a class="button-type-4" href="#">MOre about us</a>
-                                 <a class="button-type-5" href="#">our features</a>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/banner-img-2.jpg')">
-                         <div class="overlay"></div>
-                         <div class="center">
-                             <h2 class="slide-title">High quality design inspired <br> by designers every day</h2>
-                             <div class="slider-sub-title">We build creative & functional web products</div>
-                             <div class="button-row">
-                                 <a class="button-type-4" href="#">More about us</a>
-                                 <a class="button-type-5" href="#">Our features</a>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-                 <div class="pagination pagination-white  pagination-top"></div>
-                 <div class="swiper-arrow-left arrow-style-left arrow-style-1">prev</div>
-                 <div class="swiper-arrow-right  arrow-style-right arrow-style-1">next</div>
-             </div>
-            <div class="scroll-to mouse" style=""><span></span></div>
+    <div class="banner full-height-banner banner-type-3 business-slider" >
+            <div class="swiper-container full-height-slider"  data-autoplay="0" data-loop="1" data-speed="500" data-center="0" data-slides-per-view="1">
+                <div class="swiper-wrapper ">
+                    <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/custom-bg-12.jpg')">
+                        <div class="overlay overlay-lg"></div>
+                        <div class="center">
+                            <h1 class="slide-title">Welcome to sonic<br>
+                                excellent choice for business</h1>
+                            <div class="slider-sub-title">Sonic is best solution for your business, Responsive & Flexible,<br>
+                                You can present your business and services properly.</div>
+                            <div class="button-row">
+                                <a class="button-type-4" href="#">MOre about us</a>
+                                <a class="button-type-5" href="#">check our features</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/banner-img-9.jpg')">
+                        <div class="overlay overlay-lg"></div>
+                        <div class="center">
+                            <h2 class="slide-title">Welcome to sonic<br>
+                                excellent choice for business</h2>
+                            <div class="slider-sub-title">Sonic is best solution for your business, Responsive & Flexible,<br>
+                                You can present your business and services properly.</div>
+                            <div class="button-row">
+                                <a class="button-type-4" href="#">MOre about us</a>
+                                <a class="button-type-5" href="#">check our features</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide full-height-slide" style="background-image: url('/static/img/banner-img-10.jpg')">
+                        <div class="overlay overlay-lg"></div>
+                        <div class="center">
+                            <h2 class="slide-title">Welcome to sonic<br>
+                                excellent choice for business</h2>
+                            <div class="slider-sub-title">Sonic is best solution for your business, Responsive & Flexible,<br>
+                                You can present your business and services properly.</div>
+                            <div class="button-row">
+                                <a class="button-type-4" href="#">MOre about us</a>
+                                <a class="button-type-5" href="#">check our features</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pagination pagination-white pagination-bottom  "></div>
+                <div class="nav-slider-min nav-slider-min-left arrow-type-1 swiper-arrow-left"><i class="fa fa-angle-left"></i></div>
+                <div class="nav-slider-min nav-slider-min-right  arrow-type-1 swiper-arrow-right"><i class="fa fa-angle-right"></i></div>
+            </div>
         </div>
 
 {% endblock %}
