--- a/templates/master.html
+++ b/templates/master.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %} | Digitech Partner</title>
     <meta charset="utf-8">
+<meta name="description" content="DIGITECHPARTNER,SOFTWARE DIGITECH, SOFTWARE PARTNER">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -152,6 +153,18 @@
         <script src="{%  static "js/masonry.pkgd.min.js" %}"></script>
         <script src="{%  static "js/jquery.mixitup.js" %}"></script>
         <script src="{%  static "js/main.js" %}"></script>
+<!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-XXXX-Y', 'auto');
+ga('send', 'pageview');
+
+</script>
+<!-- End Google Analytics -->
         {% block js %}{% endblock %}
 </body>
 </html>
